Added Analytics IS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="language" content="English" />
     <meta name="revisit-after" content="7 days" />
     <meta name="rating" content="general" />
+    <meta name="google-site-verification" content="aY1OdfSLjYVm7Rj6xNLkR1v-z5bvmMhhJSbt8kYBSTg" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -69,16 +70,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@300;400;500&display=swap" rel="stylesheet">
 
-    <!-- Google Analytics (Replace GA_MEASUREMENT_ID with your actual ID) -->
-    <!--
-    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1GESB51YH6"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'GA_MEASUREMENT_ID');
+      gtag('config', 'G-1GESB51YH6', {
+        page_title: 'Akash Yadav Portfolio',
+        page_location: 'https://developerakash.com',
+        send_page_view: true
+      });
     </script>
-    -->
 
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
